@@ -1,10 +1,6 @@
 TODO In Autodist
 ================
 
-o Autodist should produce output file when 'license-header' is used for
-  files that _was not_ re-licensed.  This would be useful to check if
-  there are files in the distribution with wrong license.
-
 o Better 'license-header' implementation.
 
 o Perhaps ability to partially re-license the source tree.  Now all files
@@ -12,5 +8,3 @@ o Perhaps ability to partially re-license the source tree.  Now all files
 
 o Better 'noprocess' so that it would work with directories recursively,
   such as noprocess foo/bar, would not process anything under foo/bar.
-
-o Perhaps output autodist.log when processing the source tree.
